# CppCraftServer

./: .gitignore  CMakeLists.txt  README.md  config.json  cppcraft.db  main.cc
controllers/: StatisticsController.cc  StatisticsController.h  SubmissionController.cc  SubmissionController.cpp  SubmissionController.h  TasksController.cc  TasksController.h  UserController.cc  UserController.h
database_runner/: .gitignore    CMakeLists.txt  cppcraft.db  create_table  program  results.db  run_tests  test_db  test_program  test_runner
database_runner/include/: Database.h  Docker.h  Error.h  RunResult.h  Run_result.h  SolutionDB.h  StatisticsDB.h  Task.h  TaskDB.h  Terminal.h  Test.h  Unique.h  User.h  UserDB.h  database.h  error.h  run_student_code.h  saveCodeToDatabase.h  saveStudentsCode.h  solution.h  task.h  terminal.h  user.h
database_runner/src/: CompileErrorParser.cpp  CreateTable.cpp  Database.cpp  Error.cpp  SolutionDB.cpp  StatisticsDB.cpp  TaskDB.cpp  Terminal.cpp  UserDB.cpp  create_table.cpp  database.cpp  error.cpp  main.cpp  run_student_code.cpp  terminal.cpp
database_runner/student_codes/: user_1_task_4_1776114577485_2760.cpp
database_runner/tests/: test_runner.cpp
storage/: MemoryStorage.cpp  MemoryStorage.h  MemorySubmissionStorage.cpp  MemorySubmissionStorage.h  MemoryTaskStorage.cpp  MemoryTaskStorage.h  Storage.h  SubmissionStorage.h  TaskStorage.h
test/: CMakeLists.txt  test_main.cc
